tests/test_struct/good/nested3.catala_en
## Article

```catala
declaration structure S:
  data x content integer
  data y content boolean

declaration structure T:
  data a content S
  data b content S

declaration scope A:
  context output t content T

declaration scope B:
  context output t content T
  a scope A
  context output out content integer

scope A:
  definition t equals T {
    -- a : S {
      -- x : 0
      -- y : false
    }
    -- b : S {
      -- x : 1
      -- y : true
    }
  }

scope B:
  definition t equals a.t
  definition out equals if t.a.y then t.a.x else (if t.b.y then t.b.x else 42)
```

```catala-test-inline
$ catala Interpret -s A
[RESULT] Computation successful! Results:
[RESULT] t =
           { "a" = { "x" = 0; "y" = false}_S; "b" = { "x" = 1; "y" = true}_S
           }_T
```

```catala-test-inline
$ catala Interpret -s B
[RESULT] Computation successful! Results:
[RESULT] out = 1
[RESULT] t =
           { "a" = { "x" = 0; "y" = false}_S; "b" = { "x" = 1; "y" = true}_S
           }_T
```
```catala-test-inline
$ catala Interpret_Lcalc -s A --avoid_exceptions --optimize
[RESULT] Computation successful! Results:
[RESULT] t = ESome
           {
             
             "a" = ESome { "x" = ESome 0; "y" = ESome false}_S;
             "b" = ESome { "x" = ESome 1; "y" = ESome true}_S
           }_T
```
```catala-test-inline
$ catala Interpret_Lcalc -s B --avoid_exceptions --optimize
[RESULT] Computation successful! Results:
[RESULT] out = ESome 1
[RESULT] t = ESome
           {
             
             "a" = ESome { "x" = ESome 0; "y" = ESome false}_S;
             "b" = ESome { "x" = ESome 1; "y" = ESome true}_S
           }_T
```
