tests/test_struct/bad/bug_107.catala_en
## https://github.com/CatalaLang/catala/issues/107

```catala
declaration structure S:
  data x content integer
  data y content integer

declaration structure S:
  data x content integer
  data y content integer

declaration scope A:
  context a content S

scope A:
  definition a equals S { --x : 0 -- y : 1 }
```

```catala-test {id="A.Interpret"}
catala Interpret -s A
```
